--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     background: black;
@@ -33,6 +37,10 @@ body {
     color: grayscale($color: #272626);
     padding: 20px;
     width: 100%;
+    text-align: center;
+    margin-bottom: 60px;
+
+
   }
   
   
@@ -53,6 +61,7 @@ body {
   .container_with_picture {
     position: relative;
     width: 65%;
+    display: flex;
   }
   
   .image {
@@ -88,3 +97,59 @@ body {
     font-size: 16px;
     padding: 16px 32px;
   }
+
+  .my_works {
+    background: whitesmoke;
+    color: grayscale($color: #272626);
+    padding: 20px;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 60px;
+
+  }
+ .work_display{
+  margin: auto;
+  width: 50%;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+ }
+
+
+
+ .fade-in-text {
+  display: inline-block;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 150px;
+  color: black;
+  animation: fadeIn linear 7s;
+  -webkit-animation: fadeIn linear 7s;
+  -moz-animation: fadeIn linear 7s;
+  -o-animation: fadeIn linear 7s;
+  -ms-animation: fadeIn linear 7s;
+}
+
+@keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-moz-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-webkit-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-o-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-ms-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
