--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -50,7 +50,7 @@ body {
 .section {
   padding: 100px;
   text-align: center;
-  height: 95%;
+  height: 3000 px;
   background: white;
 }
 
@@ -175,6 +175,13 @@ body {
     opacity: 1;
   }
 }
+
+
+
+
+
+
+
 .fa {
   padding: 20px;
   font-size: 30px;
